# server/apps/api/api.yml
@@ -116,6 +116,12 @@ paths:
           schema:
             type: string
           required: true
+        - in: query
+          name: secret
+          description: Ask thomas for the secret
+          schema:
+            type: string
+          required: true
       tags:
       - Datasetarchiver
       description: crawl id
@@ -146,6 +152,12 @@ paths:
           description: The type of the file provided
           schema:
             type: string
+        - in: query
+          name: secret
+          description: Ask thomas for the secret
+          schema:
+            type: string
+          required: true
       tags:
       - Datasetarchiver
       description: TODO make it a json request
@@ -164,6 +176,12 @@ paths:
               - type: array
               - type: object
               - type: string
+          required: true
+        - in: query
+          name: secret
+          description: Ask thomas for the secret
+          schema:
+            type: string
           required: true
       tags:
       - Datasetarchiver
